# proj2cmake

./: CMakeLists.txt
.github/workflows/: cmake.yml
src/: main.cpp
src/cmake/: CMakeConfigTemplateWriter.cpp  CMakeListsWriter.cpp  CMakeMsc.cpp  CMakeSubDirRegistering.cpp
src/vcx/: VCXParser.cpp
